v1.0.0/modules/schema/pages/class/Transaction.adoc
= `Transaction`
:toclevels: 4


+++The record of details of payment for service or token sale.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Transaction`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Transaction`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Transaction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



LineDetail {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}







Meter {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CustomerAccount {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PricingStructure {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UserAttribute {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CashierShift {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Receipt {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



VendorShift {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AuxiliaryAccount {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




Transaction -> LineDetail: line




Transaction -> Meter: Meter


Transaction -> CustomerAccount: CustomerAccount


Transaction -> PricingStructure: PricingStructure


Transaction -> UserAttribute: UserAttributes


Transaction -> CashierShift: CashierShift


Transaction -> Receipt: Receipt


Transaction -> VendorShift: VendorShift


Transaction -> AuxiliaryAccount: AuxiliaryAccount


Transaction -> DiagramObject: DiagramObjects


Transaction -> InstanceSet: InstanceSet


Transaction -> Name: Names


Transaction -> ChangeSetMember: PropertiesCIMDataObject


Transaction -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<AuxiliaryAccount,`AuxiliaryAccount`>>
| 0..1
| xref::class/AuxiliaryAccount.adoc[`AuxiliaryAccount`]
| +++Auxiliary account for this payment transaction.+++

| <<CashierShift,`CashierShift`>>
| 0..1
| xref::class/CashierShift.adoc[`CashierShift`]
| +++Cashier shift during which this transaction was recorded.+++

| <<CustomerAccount,`CustomerAccount`>>
| 0..1
| xref::class/CustomerAccount.adoc[`CustomerAccount`]
| +++Customer account for this payment transaction.+++

| <<Meter,`Meter`>>
| 0..1
| xref::class/Meter.adoc[`Meter`]
| +++Meter for this vending transaction.+++

| <<PricingStructure,`PricingStructure`>>
| 0..1
| xref::class/PricingStructure.adoc[`PricingStructure`]
| +++Pricing structure applicable for this transaction.+++

| <<Receipt,`Receipt`>>
| 0..1
| xref::class/Receipt.adoc[`Receipt`]
| +++The receipted payment for which this transaction has been recorded.+++

| <<VendorShift,`VendorShift`>>
| 0..1
| xref::class/VendorShift.adoc[`VendorShift`]
| +++Vendor shift during which this transaction was recorded.+++

| <<diverseReference,`diverseReference`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Formal reference for use with diverse payment (traffic fine for example).+++

| <<donorReference,`donorReference`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Reference to the entity that is the source of 'amount' (for example: customer for token purchase; or supplier for free issue token).+++

| <<kind,`kind`>>
| 0..1
| xref::enumeration/TransactionKind.adoc[`TransactionKind`]
| +++Kind of transaction.+++

| <<line,`line`>>
| 0..1
| xref::class/LineDetail.adoc[`LineDetail`]
| +++Transaction amount, rounding, date and note for this transaction line.+++

| <<receiverReference,`receiverReference`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Reference to the entity that is the recipient of 'amount' (for example, supplier for service charge payment; or tax receiver for VAT).+++

| <<reversedId,`reversedId`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++(if 'kind' is transactionReversal) Reference to the original transaction that is being reversed by this transaction.+++

| <<serviceUnitsEnergy,`serviceUnitsEnergy`>>
| 0..1
| xref::class/RealEnergy.adoc[`RealEnergy`]
| +++Actual amount of service units that is being paid for.+++

| <<serviceUnitsError,`serviceUnitsError`>>
| 0..1
| xref::class/RealEnergy.adoc[`RealEnergy`]
| +++Number of service units not reflected in 'serviceUnitsEnergy' due to process rounding or truncating errors.+++

| <<UserAttributes,`UserAttributes`>>
| 0..*
| xref::class/UserAttribute.adoc[`UserAttribute`]
| +++All snapshots of meter parameters recorded at the time of this transaction. Use 'name' and 'value.value' attributes to specify name and value of a parameter from meter.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AuxiliaryAccount]
=== `AuxiliaryAccount`
+++Auxiliary account for this payment transaction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.AuxiliaryAccount`
| Cardinality
| 0..1
| Type
| xref::class/AuxiliaryAccount.adoc[`AuxiliaryAccount`]


|===

//[discrete]
[#CashierShift]
=== `CashierShift`
+++Cashier shift during which this transaction was recorded.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.CashierShift`
| Cardinality
| 0..1
| Type
| xref::class/CashierShift.adoc[`CashierShift`]


|===

//[discrete]
[#CustomerAccount]
=== `CustomerAccount`
+++Customer account for this payment transaction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.CustomerAccount`
| Cardinality
| 0..1
| Type
| xref::class/CustomerAccount.adoc[`CustomerAccount`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#diverseReference]
=== `diverseReference`
+++Formal reference for use with diverse payment (traffic fine for example).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.diverseReference`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#donorReference]
=== `donorReference`
+++Reference to the entity that is the source of 'amount' (for example: customer for token purchase; or supplier for free issue token).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.donorReference`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kind]
=== `kind`
+++Kind of transaction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/TransactionKind.adoc[`TransactionKind`]


|===

//[discrete]
[#line]
=== `line`
+++Transaction amount, rounding, date and note for this transaction line.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.line`
| Cardinality
| 0..1
| Type
| xref::class/LineDetail.adoc[`LineDetail`]


|===

//[discrete]
[#Meter]
=== `Meter`
+++Meter for this vending transaction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.Meter`
| Cardinality
| 0..1
| Type
| xref::class/Meter.adoc[`Meter`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PricingStructure]
=== `PricingStructure`
+++Pricing structure applicable for this transaction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.PricingStructure`
| Cardinality
| 0..1
| Type
| xref::class/PricingStructure.adoc[`PricingStructure`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Receipt]
=== `Receipt`
+++The receipted payment for which this transaction has been recorded.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.Receipt`
| Cardinality
| 0..1
| Type
| xref::class/Receipt.adoc[`Receipt`]


|===

//[discrete]
[#receiverReference]
=== `receiverReference`
+++Reference to the entity that is the recipient of 'amount' (for example, supplier for service charge payment; or tax receiver for VAT).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.receiverReference`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#reversedId]
=== `reversedId`
+++(if 'kind' is transactionReversal) Reference to the original transaction that is being reversed by this transaction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.reversedId`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#serviceUnitsEnergy]
=== `serviceUnitsEnergy`
+++Actual amount of service units that is being paid for.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.serviceUnitsEnergy`
| Cardinality
| 0..1
| Type
| xref::class/RealEnergy.adoc[`RealEnergy`]


|===

//[discrete]
[#serviceUnitsError]
=== `serviceUnitsError`
+++Number of service units not reflected in 'serviceUnitsEnergy' due to process rounding or truncating errors.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.serviceUnitsError`
| Cardinality
| 0..1
| Type
| xref::class/RealEnergy.adoc[`RealEnergy`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#UserAttributes]
=== `UserAttributes`
+++All snapshots of meter parameters recorded at the time of this transaction. Use 'name' and 'value.value' attributes to specify name and value of a parameter from meter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.UserAttributes`
| Cardinality
| 0..*
| Type
| xref::class/UserAttribute.adoc[`UserAttribute`]


|===

//[discrete]
[#VendorShift]
=== `VendorShift`
+++Vendor shift during which this transaction was recorded.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.VendorShift`
| Cardinality
| 0..1
| Type
| xref::class/VendorShift.adoc[`VendorShift`]


|===


