v1.1.0/modules/schema/pages/class/Transaction.adoc
= `Transaction`
:toclevels: 4


+++The record of details of payment for service or token sale.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Transaction`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Transaction`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<AuxiliaryAccount,`AuxiliaryAccount`>>
//| [[slots_table.AuxiliaryAccount]]<<AuxiliaryAccount,`AuxiliaryAccount`>>
| 0..1 +
xref::class/AuxiliaryAccount.adoc[`AuxiliaryAccount`]
| +++Auxiliary account for this payment transaction.+++
| _n/a_

| <<CashierShift,`CashierShift`>>
//| [[slots_table.CashierShift]]<<CashierShift,`CashierShift`>>
| 0..1 +
xref::class/CashierShift.adoc[`CashierShift`]
| +++Cashier shift during which this transaction was recorded.+++
| _n/a_

| <<CustomerAccount,`CustomerAccount`>>
//| [[slots_table.CustomerAccount]]<<CustomerAccount,`CustomerAccount`>>
| 0..1 +
xref::class/CustomerAccount.adoc[`CustomerAccount`]
| +++Customer account for this payment transaction.+++
| _n/a_

| <<Meter,`Meter`>>
//| [[slots_table.Meter]]<<Meter,`Meter`>>
| 0..1 +
xref::class/Meter.adoc[`Meter`]
| +++Meter for this vending transaction.+++
| _n/a_

| <<PricingStructure,`PricingStructure`>>
//| [[slots_table.PricingStructure]]<<PricingStructure,`PricingStructure`>>
| 0..1 +
xref::class/PricingStructure.adoc[`PricingStructure`]
| +++Pricing structure applicable for this transaction.+++
| _n/a_

| <<Receipt,`Receipt`>>
//| [[slots_table.Receipt]]<<Receipt,`Receipt`>>
| 0..1 +
xref::class/Receipt.adoc[`Receipt`]
| +++The receipted payment for which this transaction has been recorded.+++
| _n/a_

| <<UserAttributes,`UserAttributes`>>
//| [[slots_table.UserAttributes]]<<UserAttributes,`UserAttributes`>>
| 0..* +
xref::class/UserAttribute.adoc[`UserAttribute`]
| +++All snapshots of meter parameters recorded at the time of this transaction. Use 'name' and 'value.value' attributes to...+++
| _n/a_

| <<VendorShift,`VendorShift`>>
//| [[slots_table.VendorShift]]<<VendorShift,`VendorShift`>>
| 0..1 +
xref::class/VendorShift.adoc[`VendorShift`]
| +++Vendor shift during which this transaction was recorded.+++
| _n/a_

| <<diverseReference,`diverseReference`>>
//| [[slots_table.diverseReference]]<<diverseReference,`diverseReference`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Formal reference for use with diverse payment (traffic fine for example).+++
| _n/a_

| <<donorReference,`donorReference`>>
//| [[slots_table.donorReference]]<<donorReference,`donorReference`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Reference to the entity that is the source of 'amount' (for example: customer for token purchase; or supplier for free issue token).+++
| _n/a_

| <<kind,`kind`>>
//| [[slots_table.kind]]<<kind,`kind`>>
| 0..1 +
xref::enumeration/TransactionKind.adoc[`TransactionKind`]
| +++Kind of transaction.+++
| _n/a_

| <<line,`line`>>
//| [[slots_table.line]]<<line,`line`>>
| 0..1 +
xref::class/LineDetail.adoc[`LineDetail`]
| +++Transaction amount, rounding, date and note for this transaction line.+++
| _n/a_

| <<receiverReference,`receiverReference`>>
//| [[slots_table.receiverReference]]<<receiverReference,`receiverReference`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Reference to the entity that is the recipient of 'amount' (for example, supplier for service charge payment; or tax receiver...+++
| _n/a_

| <<reversedId,`reversedId`>>
//| [[slots_table.reversedId]]<<reversedId,`reversedId`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++(if 'kind' is transactionReversal) Reference to the original transaction that is being reversed by this transaction.+++
| _n/a_

| <<serviceUnitsEnergy,`serviceUnitsEnergy`>>
//| [[slots_table.serviceUnitsEnergy]]<<serviceUnitsEnergy,`serviceUnitsEnergy`>>
| 0..1 +
xref::class/RealEnergy.adoc[`RealEnergy`]
| +++Actual amount of service units that is being paid for.+++
| _n/a_

| <<serviceUnitsError,`serviceUnitsError`>>
//| [[slots_table.serviceUnitsError]]<<serviceUnitsError,`serviceUnitsError`>>
| 0..1 +
xref::class/RealEnergy.adoc[`RealEnergy`]
| +++Number of service units not reflected in 'serviceUnitsEnergy' due to process rounding or truncating errors.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AuxiliaryAccount]
=== `AuxiliaryAccount`
+++Auxiliary account for this payment transaction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.AuxiliaryAccount`
| Cardinality
| 0..1
| Type
| xref::class/AuxiliaryAccount.adoc[`AuxiliaryAccount`]


|===

////
[.text-left]
--
<<slots_table.AuxiliaryAccount,&#10548;>>
--
////


//[discrete]
[#CashierShift]
=== `CashierShift`
+++Cashier shift during which this transaction was recorded.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.CashierShift`
| Cardinality
| 0..1
| Type
| xref::class/CashierShift.adoc[`CashierShift`]


|===

////
[.text-left]
--
<<slots_table.CashierShift,&#10548;>>
--
////


//[discrete]
[#CustomerAccount]
=== `CustomerAccount`
+++Customer account for this payment transaction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.CustomerAccount`
| Cardinality
| 0..1
| Type
| xref::class/CustomerAccount.adoc[`CustomerAccount`]


|===

////
[.text-left]
--
<<slots_table.CustomerAccount,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#diverseReference]
=== `diverseReference`
+++Formal reference for use with diverse payment (traffic fine for example).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.diverseReference`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.diverseReference,&#10548;>>
--
////


//[discrete]
[#donorReference]
=== `donorReference`
+++Reference to the entity that is the source of 'amount' (for example: customer for token purchase; or supplier for free issue token).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.donorReference`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.donorReference,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kind]
=== `kind`
+++Kind of transaction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/TransactionKind.adoc[`TransactionKind`]


|===

////
[.text-left]
--
<<slots_table.kind,&#10548;>>
--
////


//[discrete]
[#line]
=== `line`
+++Transaction amount, rounding, date and note for this transaction line.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.line`
| Cardinality
| 0..1
| Type
| xref::class/LineDetail.adoc[`LineDetail`]


|===

////
[.text-left]
--
<<slots_table.line,&#10548;>>
--
////


//[discrete]
[#Meter]
=== `Meter`
+++Meter for this vending transaction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.Meter`
| Cardinality
| 0..1
| Type
| xref::class/Meter.adoc[`Meter`]


|===

////
[.text-left]
--
<<slots_table.Meter,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PricingStructure]
=== `PricingStructure`
+++Pricing structure applicable for this transaction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.PricingStructure`
| Cardinality
| 0..1
| Type
| xref::class/PricingStructure.adoc[`PricingStructure`]


|===

////
[.text-left]
--
<<slots_table.PricingStructure,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#Receipt]
=== `Receipt`
+++The receipted payment for which this transaction has been recorded.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.Receipt`
| Cardinality
| 0..1
| Type
| xref::class/Receipt.adoc[`Receipt`]


|===

////
[.text-left]
--
<<slots_table.Receipt,&#10548;>>
--
////


//[discrete]
[#receiverReference]
=== `receiverReference`
+++Reference to the entity that is the recipient of 'amount' (for example, supplier for service charge payment; or tax receiver for VAT).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.receiverReference`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.receiverReference,&#10548;>>
--
////


//[discrete]
[#reversedId]
=== `reversedId`
+++(if 'kind' is transactionReversal) Reference to the original transaction that is being reversed by this transaction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.reversedId`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.reversedId,&#10548;>>
--
////


//[discrete]
[#serviceUnitsEnergy]
=== `serviceUnitsEnergy`
+++Actual amount of service units that is being paid for.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.serviceUnitsEnergy`
| Cardinality
| 0..1
| Type
| xref::class/RealEnergy.adoc[`RealEnergy`]


|===

////
[.text-left]
--
<<slots_table.serviceUnitsEnergy,&#10548;>>
--
////


//[discrete]
[#serviceUnitsError]
=== `serviceUnitsError`
+++Number of service units not reflected in 'serviceUnitsEnergy' due to process rounding or truncating errors.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.serviceUnitsError`
| Cardinality
| 0..1
| Type
| xref::class/RealEnergy.adoc[`RealEnergy`]


|===

////
[.text-left]
--
<<slots_table.serviceUnitsError,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#UserAttributes]
=== `UserAttributes`
+++All snapshots of meter parameters recorded at the time of this transaction. Use 'name' and 'value.value' attributes to specify name and value of a parameter from meter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.UserAttributes`
| Cardinality
| 0..*
| Type
| xref::class/UserAttribute.adoc[`UserAttribute`]


|===

////
[.text-left]
--
<<slots_table.UserAttributes,&#10548;>>
--
////


//[discrete]
[#VendorShift]
=== `VendorShift`
+++Vendor shift during which this transaction was recorded.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Transaction.VendorShift`
| Cardinality
| 0..1
| Type
| xref::class/VendorShift.adoc[`VendorShift`]


|===

////
[.text-left]
--
<<slots_table.VendorShift,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/AuxiliaryAccount.adoc[`AuxiliaryAccount`] | xref::class/AuxiliaryAccount.adoc#PaymentTransactions[`PaymentTransactions`]



| xref::class/CashierShift.adoc[`CashierShift`] | xref::class/CashierShift.adoc#Transactions[`Transactions`]



| xref::class/CustomerAccount.adoc[`CustomerAccount`] | xref::class/CustomerAccount.adoc#PaymentTransactions[`PaymentTransactions`]



| xref::class/Meter.adoc[`Meter`] | xref::class/Meter.adoc#VendingTransactions[`VendingTransactions`]



| xref::class/PricingStructure.adoc[`PricingStructure`] | xref::class/PricingStructure.adoc#Transactions[`Transactions`]



| xref::class/Receipt.adoc[`Receipt`] | xref::class/Receipt.adoc#Transactions[`Transactions`]



| xref::class/UserAttribute.adoc[`UserAttribute`] | xref::class/UserAttribute.adoc#Transaction[`Transaction`]



| xref::class/VendorShift.adoc[`VendorShift`] | xref::class/VendorShift.adoc#Transactions[`Transactions`]


|===

